fixed section title alignment

--- a/src/styles/components/_section.scss
+++ b/src/styles/components/_section.scss
@@ -36,7 +36,7 @@
       gap: 0.5rem;
       align-items: flex-start;
 
-      & > *:last-child {
+      a {
         align-self: flex-end;
       }
     }
